--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
 
         <nav>
             <ul>
+                <li><a href="{{url_for('index')}}">Home</a></li>
                 <li><a href="{{url_for('about')}}">About</a></li>
                 <li><a href="{{url_for('services')}}">Services</a></li>
             </ul>
