--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,7 @@
 
 
 </div>
-<div id="mapid"></div>
+<div id="map1"></div>
+
+<script type="text/javascript" src="{{ url_for('static', filename='map.js') }}"></script>
 {% endblock %}
