--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,9 +35,8 @@
         <nav>
             <ul>
                 <li><a href="{{url_for('index')}}">Home</a></li>
-                <li><a href="{{url_for('bus')}}">Live Bus</a></li>
                 <li><a href="{{url_for('about')}}">About</a></li>
-                <li><a href="{{url_for('services')}}">Services</a></li>
+                <li><a href="{{url_for('contact')}}">Contact</a></li>
             </ul>
         </nav>
     </header>
