--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
-    <div class="box1">
-        <h2>We 1up the competition</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore laboriosam porro, quisquam facere officia
-            tenetur! Fuga totam, ex quidem libero perspiciatis quia reiciendis molestiae, eius qui sunt dolorum odit
-            aspernatur!</p>
-    </div>
-    <div class="box1">
-        <h2>We 1up the competition</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore laboriosam porro, quisquam facere officia
-            tenetur! Fuga totam, ex quidem libero perspiciatis quia reiciendis molestiae, eius qui sunt dolorum odit
-            aspernatur!</p>
-    </div>
 
-
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead ">This is a modified jumbotron that occupies the entire horizontal space of its parent.
+        </p>
+    </div>
 </div>
+<div class="row">
+    <div class="col-md">
+        <h2>We 1up the competition</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore laboriosam porro, quisquam facere officia
+            tenetur! Fuga totam, ex quidem libero perspiciatis quia reiciendis molestiae, eius qui sunt dolorum odit
+            aspernatur!</p>
+    </div>
+    <div class="col-md">
+        <h2>We 1up the competition</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore laboriosam porro, quisquam facere officia
+            tenetur! Fuga totam, ex quidem libero perspiciatis quia reiciendis molestiae, eius qui sunt dolorum odit
+            aspernatur!</p>
+    </div>
+</div>
+
+
 
 {% endblock %}
