--- a/cover/templates/index.html
+++ b/cover/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 
 
     <title>Hello, world!</title>
@@ -98,7 +98,7 @@
         crossorigin="anonymous"></script> -->
 
     <!-- Custom js -->
-    <script type="module" src="/static/app.js"></script>
+    <script type="module" src="{{ url_for('static', filename='app.js') }}"></script>
 
 
 </body>
